Fix wrapping contact icons

--- a/index.css
+++ b/index.css
@@ -37,15 +37,16 @@ a.badge {
     text-decoration: none;
 }
 
-.contacts, .support, .user {
+.support, .user {
     margin: 32px;
     text-align: center;
 }
 
-.contacts a {
-    font-size: 1.5em;
-}
-
 .contacts-row {
     margin: 16px;
+    text-align: center;
+}
+
+.contacts-row a {
+    font-size: 1.5em;
 }
